<resources>
    <string name="app_name">Govi Mithuru</string>
    <string name="placeholder_nic">NIC number</string>
    <string name="placeholder_agriOfficerNo">Agri Officer Reg. No.</string>
    <string name="btnText_login">Login</string>
    <string name="btnText_register">Register New Account</string>
    <string name="locale_selector_EN" translatable="false">ENGLISH</string>
    <string name="locale_selector_SI" translatable="false">සිංහල</string>
    <string name="app_title_govi">Govi</string>
    <string name="app_title_mithuru">Mithuru</string>
    <string name="btnText_submit">Submit</string>
    <string name="placeholder_farmerNo">Farmer Reg. No.</string>
    <string name="txt_Welcome">Ayubowan!</string>
    <string name="settings_button_desc" translatable="false">PREFERENCES</string>
    <string name="txt_submit_evidence">Submit Evidence</string>
    <string name="image_content_desc" translatable="false">EVIDENCE</string>
    <string name="camera_content_desc" translatable="false">CAMERA_ICON</string>
    <string name="placeholder_evidence_desc">Description about this evidence</string>
    <string name="btnText_remove_evidence">Remove</string>
    <string name="next_button_desc" translatable="false">NEXT_EVIDENCE</string>
    <string name="prev_button_desc" translatable="false">PREVIOUS_EVIDENCE</string>
    <string name="txt_new_claim">New Claim Request</string>
    <string name="txt_farmerDetails">Details of the farmer</string>
    <string name="txt_agriServiceCenter">Agricultural Service Center</string>
    <string name="txt_gramaNiladhariDiv">Grama Niladhari Division</string>
    <string name="txt_farmerRegNo">Farmer Registration No.</string>
    <string name="txt_name">Name</string>
    <string name="txt_address">Address</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_nic">National Identity Card No.</string>
    <string name="txt_landDetails">Details of the land</string>
    <string name="txt_landRegNo">Land Registration No.</string>
    <string name="txt_landName">Name of the Land</string>
    <string name="txt_areaOfLand">Area of the Land (in hectares)</string>
    <string name="txt_cultivationDetails">Details of the cultivation</string>
    <string name="txt_crop">Cultivated crop</string>
    <string name="txt_cultivationDate">Date of cultivation</string>
    <string name="txt_areaOfCultivation">Area of cultivation (in hectares)</string>
    <string name="txt_timeToHarvest">Time to yield harvest (in months)</string>
    <string name="txt_months">months</string>
    <string name="txt_damageDetails">Details of the damage</string>
    <string name="txt_damageDate">Date of damage</string>
    <string name="txt_damageCause">Cause of damage</string>
    <string name="txt_flood">Flood</string>
    <string name="txt_drought">Drought</string>
    <string name="txt_elephants">Wild Elephants</string>
    <string name="txt_fire">Fire</string>
    <string name="txt_diseasesPests">Diseases/Pests</string>
    <string name="txt_other">Other</string>
    <string name="txt_damageLevel">Damage level</string>
    <string name="txt_completeDamage">Complete damage</string>
    <string name="txt_partialDamage">Partial damage</string>
    <string name="txt_minorDamage">Minor damage</string>
    <string name="txt_areaOfDamage">Area of damage (in hectares)</string>
    <string name="txt_perches">perches</string>
    <string name="txt_compensationDetails">Details of the compensation</string>
    <string name="txt_amountRequested">Amount requested (LKR)</string>
    <string name="txt_rupees">LKR</string>
    <string name="txt_bankAccountNo">Bank account No.</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_branch">Branch</string>
    <string name="txt_verificationOfDetails">I hereby verify that the details in this form are correct.</string>
    <string-array name="array_damageCauses">
        <item>@string/txt_flood</item>
        <item>@string/txt_drought</item>
        <item>@string/txt_elephants</item>
        <item>@string/txt_fire</item>
        <item>@string/txt_diseasesPests</item>
        <item>@string/txt_other</item>
    </string-array>
    <string-array name="array_damageLevel">
        <item>@string/txt_completeDamage</item>
        <item>@string/txt_partialDamage</item>
        <item>@string/txt_minorDamage</item>
    </string-array>
    <string name="placeholder_mandatory">Required</string>
    <string name="txt_brieflyExplain">Please explain the cause briefly.</string>
    <string name="txt_invalidInput">Invalid Input. Please try again!</string>
    <string name="txt_claimTopic">Topic</string>
    <string name="txt_topicExplain">Include a brief topic to this claim, mentioning the damage.</string>
    <string name="txt_defaultClaimTopic">Claim Request on %1$s</string>
    <string name="txt_finalize">Finalize Claim</string>
    <string name="txt_dataAsAt">Data as at %1$s</string>
    <string name="txt_refresh">Refresh Data</string>
    <string name="txt_viewEvidences">View Evidences</string>
    <string name="txt_includedEvidences">Included Evidences</string>
    <string name="txt_myClaims">My Claims</string>
    <string name="txt_noClaims">No Claims.</string>
    <string name="txt_maxAllowed">Allowed maximum number of evidences is %1$d. You can submit %2$d more.</string>
    <string name="txt_noMoreEvidences">You have submitted the maximum allowed number of evidences.</string>
    <string name="txt_finalizeClaim">Finalizing Claim</string>
    <string name="txt_sendClaim">Send Claim</string>
    <string name="btnText_submitting">Submitting...</string>
    <string name="btnText_validating">Validating...</string>
    <string name="txt_notification">Fetching internet connection</string>
    <string name="txt_submittingClaim">Submitting Claim.</string>
    <string name="txt_pleaseWait">Please Wait...</string>
    <string name="txt_clickCamera">Click on the Camera icon to take photos.</string>
</resources>