<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    tools:context=".accountManagement.Login2AActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LAY_whiteBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/TX_mainTitleTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_title_top_margin"
            android:gravity="center"
            android:text="@string/app_title_govi"
            android:textColor="@color/app_color_1"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TX_mainTitleBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_mithuru"
            android:textColor="@color/app_color_1"
            android:textSize="@dimen/main_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TX_mainTitleTop" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CARD_nic"
            android:layout_width="@dimen/card_1_width"
            android:layout_height="@dimen/card_1_height"
            android:layout_marginTop="@dimen/margin_2"
            app:cardCornerRadius="@dimen/card_1_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TX_mainTitleBottom">

            <EditText
                android:id="@+id/ED_nic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_1"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginEnd="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:ems="10"
                android:hint="@string/placeholder_nic"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CARD_farmerNo"
            android:layout_width="@dimen/card_1_width"
            android:layout_height="@dimen/card_1_height"
            android:layout_marginTop="@dimen/margin_2"
            app:cardCornerRadius="@dimen/card_1_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CARD_nic">

            <EditText
                android:id="@+id/ED_agriOfficerNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_1"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginEnd="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:ems="10"
                android:hint="@string/placeholder_agriOfficerNo"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/BT_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:shadowColor="@color/black"
            android:shadowDx="15"
            android:shadowDy="15"
            android:text="@string/btnText_login"
            android:textAllCaps="false"
            app:backgroundTint="@color/app_color_2"
            app:cornerRadius="@dimen/button_1_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CARD_farmerNo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>