<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    tools:context=".claimManagement.Claim1FActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LAY_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TX_appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginLeft="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:text="@string/app_name"
            android:textColor="@color/app_color_1"
            android:textSize="@dimen/app_title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/BT_settings"
            android:layout_width="@dimen/settings_btn_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginRight="@dimen/margin_1"
            android:clickable="true"
            android:contentDescription="@string/settings_button_desc"
            android:focusable="true"
            android:scaleType="center"
            app:backgroundTint="@color/app_color_3"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_preferences" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LAY_pageContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginLeft="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginRight="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:background="@color/alpha2_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TX_appTitle">

            <TextView
                android:id="@+id/TX_newClaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_1"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_1"
                android:text="@string/txt_new_claim"
                android:textColor="@color/app_color_1"
                android:textSize="@dimen/page_title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/BTN_submitEvidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:onClick="submitEvidence"
                android:text="@string/txt_submit_evidence"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>