<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    tools:context=".claimManagement.Claim3FActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LAY_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TX_appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginLeft="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:text="@string/app_name"
            android:textColor="@color/app_color_1"
            android:textSize="@dimen/app_title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LAY_pageContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginLeft="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginRight="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:background="@color/alpha2_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TX_appTitle">

            <TextView
                android:id="@+id/TX_finalizeClaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:text="@string/txt_finalizeClaim"
                android:textColor="@color/app_color_1"
                android:textSize="@dimen/page_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TX_submittingClaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:layout_marginEnd="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:text="@string/txt_submittingClaim"
                android:textSize="@dimen/form_section_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TX_finalizeClaim" />

            <TextView
                android:id="@+id/TX_pleaseWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_1"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_1_half"
                android:layout_marginEnd="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:text="@string/txt_pleaseWait"
                android:textSize="@dimen/form_section_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TX_submittingClaim" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>